--- a/Accounts/package.json
+++ b/Accounts/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.4",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mariadb": "^2.0.3"
   }
