--- a/Courses/package.json
+++ b/Courses/package.json
@@ -1,11 +1,17 @@
 {
   "name": "courses",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": [],
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mariadb": "^2.0.3"
+  }
 }
