--- a/Courses/package.json
+++ b/Courses/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mariadb": "^2.0.3",
-    "bcrypt": "^3.0.5"
+    "mariadb": "^2.0.3"
   }
 }
