--- a/Accounts/package.json
+++ b/Accounts/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "mariadb": "^2.0.3",
-    "bcrypt": "^3.0.5"
+    "uuid": "^3.3.2"
   }
 }
